--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.2.0",
-    "mongodb": "^3.1.13",
+    "express": "^4.16.4",
+    "mongodb": "^3.2.2",
     "socket.io": "^2.2.0"
   }
 }
